--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,9 +14,9 @@
 
 <div class="container">
 	<div class="jumbotron">
-		<h1>This Is Heroku Awesome!</h1>
-		<p>This is the sample of a tutorial on <a href="http://scotch.io">scotch.io</a></p>
-		<a href="http://scotch.io/tutorials/" class="btn btn-primary btn-lg">View the Tutorial</a>
+		<h1>JOIN TO EARN MONEY</h1>
+		<p>This is a Telegram BOT FOR BETTING</p>
+		<a href="t.me/jiodl_bot" class="btn btn-primary btn-lg">JOIN NOW</a>
 	</div>
 </div>
 	<script>
